[tool.poetry]
name = "quickbolt"
version = "0.4.1"
description = "Asynchronously make and validate requests!"
authors = ["Ashton Szabo <aszabo00@gmail.com>"]
repository = "https://github.com/aszabo00/quickbolt"
readme = "README.md"
license = "MIT"
classifiers = [
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.11"
pytest-asyncio = "0.21.1"
pytest = "8.0.2"
pytest-xdist = "^3.5.0"
aiohttp = {extras = ["speedups"], version = "^3.9.3"}
httpx = {extras = ["http2"], version = "^0.27.0"}
uvloop = "^0.19.0"
pypeln = "^0.4.9"
aiofiles = "^23.2.1"
aiologger = "^0.7.0"
aiocsv = "^1.3.1"
orjson = "^3.9.15"
numpy = "^1.26.4"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
ruff = "^0.3.2"
mypy = "^1.9.0"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "I001"
]

exclude = ["*__init__.py", "*_pb2.pyi", "*_pb2.py", "*_pb2_grpc.py"]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E722",  # bare except
    "F403",  # import by *
    "B904",  # raise error within except clause
]

[tool.lint.isort]
known-first-party = ["quickbolt"]

[tool.mypy]
warn_unused_ignores = false
ignore_missing_imports = true
exclude = ["tests/", "examples/", "quickbolt/", "/usr/local/lib/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
