[tool.poetry]
name = "quickbolt"
version = "0.4.2"
description = "Asynchronously make and validate requests!"
authors = ["Ashton Szabo <aszabo00@gmail.com>"]
repository = "https://github.com/aszabo00/quickbolt"
readme = "README.md"
license = "MIT"
classifiers = [
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-xdist = "^3.6.1"
aiohttp = {extras = ["speedups"], version = "^3.11.11"}
httpx = {extras = ["http2"], version = "^0.28.1"}
uvloop = "^0.21.0"
pypeln = "^0.4.9"
aiofiles = "^24.1.0"
aiologger = "^0.7.0"
aiocsv = "^1.3.2"
orjson = "^3.10.15"
numpy = "^2.2.2"
grpcio = "^1.70.0"
grpcio-tools = "^1.70.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
ruff = "^0.9.4"
mypy = "^1.15.0"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "I001"
]

exclude = ["*__init__.py", "*_pb2.pyi", "*_pb2.py", "*_pb2_grpc.py"]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E722",  # bare except
    "F403",  # import by *
    "B904",  # raise error within except clause
]

[tool.lint.isort]
known-first-party = ["quickbolt"]

[tool.mypy]
warn_unused_ignores = false
ignore_missing_imports = true
exclude = ["tests/", "examples/", "quickbolt/", "/usr/local/lib/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
